# Network_chat_with_database

./: README.md
Network_chat_with_database/Client/: CMakeLists.txt  Client.sln  Client.vcxproj  main.cpp
Network_chat_with_database/Client/Debug/: vc143.idb
Network_chat_with_database/Client/Debug/Client.tlog/: Client.lastbuildstate
Network_chat_with_database/Client/x64/Debug/: Client.exe.recipe  Client.ilk  Client.vcxproj.FileListAbsolute.txt  vc143.idb
Network_chat_with_database/Client/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Network_chat_with_database/Server/: CMakeLists.txt  ConsoleChat.cpp  ConsoleChat.h  Message.cpp  Message.h  NetWorkStream.cpp  NetWorkStream.h  Server.sln  Server.vcxproj  Server.vcxproj.filters  User.cpp  User.h  main.cpp  sha1.cpp  sha1.h
Network_chat_with_database/Server/Release/: Server.exe.recipe  Server.exp  Server.iobj  Server.ipdb  Server.lib  Server.vcxproj.FileListAbsolute.txt
Network_chat_with_database/Server/Release/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
